Decreased cellsize. Slightly decreased snake speed. Snake will no longer render outside of the arena. Arena will now change colour if food eaten. Added visible scoreboard, position and high score.

--- a/style.css
+++ b/style.css
@@ -1,37 +1,91 @@
-body {
+html, body {
+    height: 100%;
     margin: 0px;
+    font-family: sans-serif;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .snake {
-    background-color: #000;
-    width: 40px;
-    height: 40px;
+    background-color: hsl(193, 100%, 4%);
+    width: 20px;
+    height: 20px;
     position: absolute;
     z-index: 1000;
+    left: 0px;
+    top: 0px;
 }
 
 .food {
     background-color: #AF4242;
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     position: absolute;
     z-index: 1;
     top: 0px;
     left: 0px;
 }
 
+
 .bodyPiece {
-    background-color: #B4B4B4;
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     position: absolute;
     left: -400px;
     top: -400px;
+    z-index: 2px;
+    background-color: grey;
+}
+
+.scoreBoard {
+    background-color: hsl(193, 100%, 90%);
+    width: 760px;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+    border: 2px solid black;
+    border-top: 0px;
+}
+
+.counter {
+    width: 38%;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.counterMid {
+    width: 22%;
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.positionMid {
+    margin: 5px 0px;
+}
+
+.center {
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    height: 18px;
+    padding-top: 16px;
 }
 
 .arena {
-    width: 480px;
-    height: 480px;
-    box-sizing: border-box;
+    width: 760px;
+    height: 760px;
+    position: relative;
+    background-color: hsl(193, 100%, 30%);
     border: #000 2px solid;
 }
